// Premier XI — Prisma schema
// NOTE: SQLite ไม่รองรับ native enum จึงใช้ String + constants ที่ src/lib/constants.ts

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

/// ผู้เล่น / บัญชีผู้ใช้ (รวมกระเป๋าเงินทุกสกุล)
model User {
  id           String  @id @default(cuid())
  username     String  @unique
  phone        String  @unique
  passwordHash String
  isAdmin      Boolean @default(false)

  // Account progression
  level Int @default(1)
  exp   Int @default(0)

  // Currencies (Phase 0 economy)
  silver      Int @default(0)
  gold        Int @default(0)
  packTicket  Int @default(0) // เดิมใช้เปิด Ticket Pack — ยกเลิก pack นั้นแล้ว เก็บ field ไว้เผื่ออนาคต ไม่แจกเพิ่มแล้ว
  shards      Int @default(0) // จากการ์ดซ้ำ tier Bronze/Silver/Gold (Standard pack) — แลกเปิด Standard Pack ฟรี
  evoShards   Int @default(0) // จากการ์ดซ้ำ tier Hero (Evolution pack) — แลกเปิด Evolution Pack ฟรี
  primeShards Int @default(0) // จากการ์ดซ้ำ tier Legend (Royal Prime pack) — แลกเปิด Royal Prime Pack ฟรี

  // Pity: จำนวนครั้งที่เปิด Premium ติดกันโดยยังไม่ได้ Gold (ไม่ได้ใช้แล้วหลังยกเลิก Premium pack — เก็บไว้เผื่ออนาคต)
  pityCounter Int @default(0)

  // Daily login
  loginStreak   Int       @default(0)
  lastClaimDate DateTime?
  totalLogins   Int       @default(0) // จำนวนวันที่เคย login รวม (ไม่รีเซ็ตแม้ streak ขาด) — ใช้เช็ค milestone

  // Onboarding
  starterClaimed Boolean @default(false)

  // Launch promotion: milestone แจกซองพิเศษฟรีครั้งเดียวตอน login ครบ 15/30 วัน (นับจาก totalLogins ไม่ใช่ streak)
  evoMilestoneClaimed   Boolean @default(false)
  primeMilestoneClaimed Boolean @default(false)

  // Launch promotion: โบนัส Gold +20% ตอนเติมเงินจริงครั้งแรก
  hasDeposited Boolean @default(false)

  // Notification center: เวลาที่อ่านข่าว (Announcement) ล่าสุด — ใช้คำนวณ unread ของข่าว
  lastReadNewsAt DateTime?

  // PvP (Phase 3) — tier derive จาก pvpRP ผ่าน tierForRP() ใน src/lib/pvp.ts เสมอ ไม่ store tier แยก
  pvpRP           Int       @default(0)
  pvpSeasonKey    String? // "YYYY-MM" แบบ UTC (ดู seasonKey() ใน pvp.ts) — null = ยังไม่เคยแข่งเลย
  pvpWinStreak    Int       @default(0)
  pvpMatchesToday Int       @default(0)
  pvpMatchesDate  DateTime? // เทียบ dayIndex() เหมือน daily.ts เพื่อรีเซ็ตโควตารายวัน

  // Achievement (category "activity") — lifetime counter เริ่มนับ 0 ตั้งแต่ deploy ระบบนี้ ไม่ backfill ย้อนหลัง
  // ดู docs/superpowers/specs/2026-07-20-achievement-collection-design.md Non-goals
  totalPacksOpened Int @default(0) // นับเฉพาะ openPack()/openPackWithShards() ที่ user กดเอง — ห้ามนับ starter/free pack จาก milestone อื่น
  pvpTotalWins     Int @default(0) // นับชนะสะสมตลอดกาล (ต่างจาก pvpWinStreak ที่รีเซ็ตเมื่อแพ้)

  createdAt   DateTime  @default(now())
  lastLoginAt DateTime?

  cards               UserCard[]
  squad               Squad?
  notifications       Notification[]
  announcements       Announcement[] @relation("AnnouncementAuthor")
  missionProgress     MissionProgress[]
  achievementProgress AchievementProgress[]
}

/// นักเตะจริง (ตัวตนของนักเตะ 1 คน — หนึ่งคนมีได้หลายการ์ด/หลายเวอร์ชัน)
model Player {
  id       String @id @default(cuid())
  name     String
  club     String
  nation   String
  league   String @default("Premier League")
  position String // ตำแหน่งหลัก (ดู POSITIONS ใน constants)

  cards     Card[]
  createdAt DateTime @default(now())
}

/// การ์ด = เวอร์ชันหนึ่งของนักเตะ (เช่น Salah Gold, Salah TOTW) พร้อมค่าพลัง
model Card {
  id       String @id @default(cuid())
  playerId String
  player   Player @relation(fields: [playerId], references: [id], onDelete: Cascade)

  tier     String // Bronze, Silver, Gold, Elite, Hero, Icon, Event, TOTW, TOTS, Legend
  category String @default("normal") // normal | special
  position String

  ovr       Int
  pace      Int
  shooting  Int
  passing   Int
  dribbling Int
  defending Int
  physical  Int

  // ข้อมูลเสริมที่อ่านจากหน้าการ์ด
  altPositions String? // คั่นด้วย comma เช่น "LM,ST"
  foot         String? // R | L
  skillMoves   Int? // 1-5
  weakFoot     Int? // 1-5
  indexRating  Float? // เลขในกรอบสีเขียวมุมล่างขวา

  imageUrl  String?
  isStarter Boolean @default(false) // ใช้ในกล่อง Starter Pack ได้หรือไม่

  owners     UserCard[]
  squadSlots SquadSlot[]
  createdAt  DateTime   @default(now())

  @@index([tier])
  @@index([category])
}

/// ความเป็นเจ้าของการ์ดของผู้เล่น (ถือได้ 1 ใบต่อการ์ด — ซ้ำ = แปลงเป็น shard)
model UserCard {
  id     String @id @default(cuid())
  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  cardId String
  card   Card   @relation(fields: [cardId], references: [id], onDelete: Cascade)

  acquiredAt DateTime @default(now())

  @@unique([userId, cardId])
  @@index([userId])
}

/// ทีมของผู้เล่น (หนึ่งทีมต่อผู้ใช้)
model Squad {
  id        String      @id @default(cuid())
  userId    String      @unique
  user      User        @relation(fields: [userId], references: [id], onDelete: Cascade)
  formation String      @default("4-3-3")
  slots     SquadSlot[]
  updatedAt DateTime    @updatedAt

  // PvP matchmaking query filter เท่านั้น — ไม่ใช่ source of truth ของแมตช์จริง (ดู pvp.ts: findOpponent/playPvpMatch)
  cachedRating Int @default(0)

  @@index([cachedRating])
}

/// ช่องในทีม (0-10) ผูกกับการ์ดที่ผู้เล่นมี
model SquadSlot {
  id      String  @id @default(cuid())
  squadId String
  squad   Squad   @relation(fields: [squadId], references: [id], onDelete: Cascade)
  index   Int
  cardId  String?
  card    Card?   @relation(fields: [cardId], references: [id], onDelete: SetNull)

  @@unique([squadId, index])
}

/// การแจ้งเตือนกิจกรรมส่วนตัวของผู้เล่น (เปิดซอง/เลเวลอัพ/รับรางวัล ฯลฯ)
/// type เป็น String ตาม constants (SQLite ไม่รองรับ enum) — ดู NOTIFICATION_TYPE ใน src/lib/constants.ts
model Notification {
  id     String @id @default(cuid())
  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  type  String
  title String
  body  String?
  href  String? // deep link เช่น /collection, /pack

  read      Boolean  @default(false)
  createdAt DateTime @default(now())

  @@index([userId, read])
  @@index([userId, createdAt])
}

/// ข่าว/ประกาศแบบ broadcast (admin เขียน เห็นทุกคน)
model Announcement {
  id        String   @id @default(cuid())
  title     String
  body      String
  published Boolean  @default(true)
  createdAt DateTime @default(now())

  authorId String?
  author   User?   @relation("AnnouncementAuthor", fields: [authorId], references: [id], onDelete: SetNull)

  @@index([published, createdAt])
}

/// ความคืบหน้ามิชชั่น Daily/Weekly — ตารางเดียว generic ใช้ร่วมกับทุกมิชชั่นในอนาคต (ไม่ต้อง migrate เพิ่มเวลาเพิ่มมิชชั่นใหม่)
/// missionKey ต้องมาจาก MISSION_KEYS ใน src/lib/missionConfig.ts เท่านั้น — ดู docs/superpowers/specs/2026-07-17-daily-weekly-mission-design.md
model MissionProgress {
  id     String @id @default(cuid())
  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  missionKey String // เช่น "daily_login" — จาก MISSION_KEYS เท่านั้น
  periodKey  String // daily: epoch-day string / weekly: epoch-week string (ดู src/lib/missionPeriod.ts)

  progress Int     @default(0)
  claimed  Boolean @default(false)

  updatedAt DateTime @updatedAt

  @@unique([userId, missionKey, periodKey])
  @@index([userId, periodKey])
}

/// สถานะเคลม Achievement — ตัวเดียว generic ใช้ร่วมทุกหมวด (activity/club/meta)
/// progress ไม่เก็บในตารางนี้ — คำนวณสดเสมอจาก User counter (activity) หรือ UserCard join (club/meta)
/// achievementKey ต้องมาจาก ACHIEVEMENTS ใน src/lib/achievementConfig.ts เท่านั้น
/// row จะถูกสร้างก็ต่อเมื่อเคลมสำเร็จเท่านั้น (ไม่มี "progress row" สร้างล่วงหน้าเหมือน MissionProgress)
model AchievementProgress {
  id     String @id @default(cuid())
  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  achievementKey String

  claimed   Boolean   @default(false)
  claimedAt DateTime?

  @@unique([userId, achievementKey])
  @@index([userId])
}
